tests/ui/impl-trait/precise-capturing/capture-parent-arg.stderr
error: `impl Trait` captures lifetime parameter, but it is not mentioned in `use<...>` precise captures list
  --> $DIR/capture-parent-arg.rs:25:31
   |
LL | impl<'a> W<'a> {
   |      -- this lifetime parameter is captured
LL |     fn bad1() -> impl Into<<W<'a> as Tr>::Assoc> + use<> {}
   |                  -------------^^------------------------ lifetime captured due to being mentioned in the bounds of the `impl Trait`

error: `impl Trait` captures lifetime parameter, but it is not mentioned in `use<...>` precise captures list
  --> $DIR/capture-parent-arg.rs:31:18
   |
LL | impl<'a> W<'a> {
   |      -- this lifetime parameter is captured
LL |     fn bad2() -> impl Into<<Self as Tr>::Assoc> + use<> {}
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ lifetime captured due to being mentioned in the bounds of the `impl Trait`

error: aborting due to 2 previous errors

